# snail

./: .gitignore  AGENTS.md  DEVELOPING.md  LOOP.md  README.md  build.zig  build.zig.zon  plan.md  pyproject.toml  sgconfig.local.yml  worklog.md  zensical.toml  zig.md
.codex/: config.toml
.codex/environments/: environment.toml
analysis/: README.md
analysis/cdb/: windows-outer-bridge-capture-2026-03-24.md
analysis/decompile/: README.md  health_checks.json  index.json
analysis/headers/: README.md  archive_shell_types.h  bass_min.h  bn_archive_shell_types.h  bn_backdrop_types.h  bn_frame_renderer_types.h  bn_frontend_menu_types.h  bn_frontend_widget_types.h  bn_garbage_hazard_types.h  bn_high_score_bank_types.h  bn_high_score_screen_types.h  bn_input_state_types.h  bn_intro_types.h  bn_loading_bar_types.h  bn_logo_types.h  bn_object_render_types.h  bn_overlay_types.h  bn_parse_helper_prototypes.h  bn_player_presentation_types.h  bn_root_bod_catalog_types.h  bn_selected_level_record_types.h  bn_subgame_hazard_pool_types.h  bn_subgame_pool_types.h  bn_subgame_runtime_types.h  bn_track_health_pickup_game_view.h  bn_track_pickup_owner_game_view.h  (+28 more)
docs/: asset-formats.md  index.md
tests/: test_archive.py  test_binja_narrow_sync.py  test_binja_reference_sync.py  test_codex_loop.py  test_decompile_exports.py  test_decompile_health.py  test_formats.py  test_ida_reference_manifest.py  test_match.py  test_recon.py  test_reflexive.py  test_screenshots.py  test_symbols.py  test_trace.py
tools/: check_decompile_health.py  codex_loop.py  export_tracked_decompiles.py
(+4641 files in other folders)
