[project]
name = "snail-mail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "banteg", email = "4562643+banteg@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
snail-mail = "snail_mail:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
